[gd_scene load_steps=4 format=3 uid="uid://loading_scene"]

[ext_resource type="Script" path="res://scripts/Loading.gd" id="1_loading"]
[ext_resource type="FontFile" path="res://assets/fonts/Vazir.ttf" id="2_font"]

[sub_resource type="GDScript" id="GDScript_shader"]
script/source = "extends ColorRect

var time: float = 0.0

func _process(delta: float) -> void:
	time += delta
	material.set_shader_parameter('time', time)
"

[sub_resource type="Shader" id="Shader_bg"]
code = "shader_type canvas_item;

uniform float time : hint_range(0.0, 100.0) = 0.0;
uniform vec4 color1 : source_color = vec4(0.1, 0.1, 0.2, 1.0);
uniform vec4 color2 : source_color = vec4(0.2, 0.1, 0.3, 1.0);
uniform vec4 color3 : source_color = vec4(0.1, 0.2, 0.3, 1.0);

void fragment() {
	vec2 uv = UV;
	float wave = sin(uv.x * 3.0 + time * 0.5) * 0.5 + 0.5;
	float wave2 = cos(uv.y * 2.0 + time * 0.3) * 0.5 + 0.5;
	
	vec4 gradient = mix(color1, color2, uv.y);
	gradient = mix(gradient, color3, wave * wave2 * 0.3);
	
	COLOR = gradient;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bg"]
shader = SubResource("Shader_bg")
shader_parameter/time = 0.0
shader_parameter/color1 = Color(0.08, 0.08, 0.15, 1)
shader_parameter/color2 = Color(0.15, 0.08, 0.2, 1)
shader_parameter/color3 = Color(0.08, 0.15, 0.2, 1)

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font = ExtResource("2_font")
font_size = 72
font_color = Color(1, 1, 1, 1)
outline_size = 4
outline_color = Color(0.2, 0.1, 0.3, 1)
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.5)
shadow_offset = Vector2(3, 3)

[sub_resource type="LabelSettings" id="LabelSettings_status"]
font = ExtResource("2_font")
font_size = 28
font_color = Color(0.8, 0.8, 0.9, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tip"]
font = ExtResource("2_font")
font_size = 22
font_color = Color(0.6, 0.6, 0.7, 1)

[node name="Loading" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_loading")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
material = SubResource("ShaderMaterial_bg")
script = SubResource("GDScript_shader")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
alignment = 1

[node name="Spacer1" type="Control" parent="Content"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="LogoContainer" type="CenterContainer" parent="Content"]
layout_mode = 2
size_flags_vertical = 2

[node name="Logo" type="TextureRect" parent="Content/LogoContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
expand_mode = 3

[node name="Title" type="Label" parent="Content"]
layout_mode = 2
size_flags_horizontal = 4
text = "Ù¾Ø§Ø²Ù„ Ú©Ù„Ù…Ø§Øª"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Content"]
layout_mode = 2
size_flags_horizontal = 4
text = "Ø³ÙØ± Ø¯Ø± Ø¯Ù†ÛŒØ§ÛŒ Ú©Ù„Ù…Ø§Øª ÙØ§Ø±Ø³ÛŒ"
label_settings = SubResource("LabelSettings_status")
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="Content"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3

[node name="LoadingContainer" type="VBoxContainer" parent="Content"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ProgressContainer" type="HBoxContainer" parent="Content/LoadingContainer"]
layout_mode = 2
alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Content/LoadingContainer/ProgressContainer"]
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
theme_override_styles/fill = null
theme_override_styles/background = null
max_value = 1.0
value = 0.0
show_percentage = false

[node name="StatusLabel" type="Label" parent="Content/LoadingContainer"]
layout_mode = 2
text = "Ø¯Ø± Ø­Ø§Ù„ Ø¢Ù…Ø§Ø¯Ù‡â€ŒØ³Ø§Ø²ÛŒ..."
label_settings = SubResource("LabelSettings_status")
horizontal_alignment = 1

[node name="LoadingAnimation" type="HBoxContainer" parent="Content/LoadingContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1
theme_override_constants/separation = 15

[node name="Dot1" type="Panel" parent="Content/LoadingContainer/LoadingAnimation"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2

[node name="Dot2" type="Panel" parent="Content/LoadingContainer/LoadingAnimation"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2

[node name="Dot3" type="Panel" parent="Content/LoadingContainer/LoadingAnimation"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2

[node name="Spacer3" type="Control" parent="Content"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3

[node name="TipLabel" type="Label" parent="Content"]
layout_mode = 2
text = "ğŸ’¡ Ù†Ú©ØªÙ‡: Ø­Ø±ÙˆÙ Ø±Ø§ Ø¨Ø§ Ú©Ø´ÛŒØ¯Ù† Ø§Ù†Ú¯Ø´Øª Ø¨Ù‡ Ù‡Ù… ÙˆØµÙ„ Ú©Ù†ÛŒØ¯"
label_settings = SubResource("LabelSettings_tip")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer4" type="Control" parent="Content"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
text = "Ù†Ø³Ø®Ù‡ 1.0.0"
label_settings = SubResource("LabelSettings_tip")
horizontal_alignment = 1
