## Loading.gd - ØµÙØ­Ù‡ Ù„ÙˆØ¯ÛŒÙ†Ú¯ Ø¨Ø§ Ø§Ù†ÛŒÙ…ÛŒØ´Ù†
## Ù…Ø¯ÛŒØ±ÛŒØª Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ Ù…Ù†Ø§Ø¨Ø¹ Ùˆ Ø¯Ø§Ø¯Ù‡â€ŒÙ‡Ø§ÛŒ Ø¨Ø§Ø²ÛŒ
extends Control

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ø«Ø§Ø¨Øªâ€ŒÙ‡Ø§
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
const NEXT_SCENE: String = "res://scenes/Main.tscn"
const MIN_LOADING_TIME: float = 2.0  # Ø­Ø¯Ø§Ù‚Ù„ Ø²Ù…Ø§Ù† Ù†Ù…Ø§ÛŒØ´ Ù„ÙˆØ¯ÛŒÙ†Ú¯

# Ù†Ú©Ø§Øª Ø±Ø§Ù‡Ù†Ù…Ø§
const TIPS: Array[String] = [
	"ğŸ’¡ Ù†Ú©ØªÙ‡: Ø­Ø±ÙˆÙ Ø±Ø§ Ø¨Ø§ Ú©Ø´ÛŒØ¯Ù† Ø§Ù†Ú¯Ø´Øª Ø¨Ù‡ Ù‡Ù… ÙˆØµÙ„ Ú©Ù†ÛŒØ¯",
	"ğŸ’¡ Ù†Ú©ØªÙ‡: Ú©Ù„Ù…Ø§Øª Ù…Ø®ÙÛŒ Ø§Ù…ØªÛŒØ§Ø² Ø¨ÛŒØ´ØªØ±ÛŒ Ø¯Ø§Ø±Ù†Ø¯",
	"ğŸ’¡ Ù†Ú©ØªÙ‡: Ù‡Ø± Ø±ÙˆØ² ÙˆØ§Ø±Ø¯ Ø´ÙˆÛŒØ¯ Ùˆ Ø¬Ø§ÛŒØ²Ù‡ Ø¨Ú¯ÛŒØ±ÛŒØ¯",
	"ğŸ’¡ Ù†Ú©ØªÙ‡: Ø§Ø² Ø±Ø§Ù‡Ù†Ù…Ø§Ù‡Ø§ Ø¯Ø± Ù…Ø±Ø§Ø­Ù„ Ø³Ø®Øª Ø§Ø³ØªÙØ§Ø¯Ù‡ Ú©Ù†ÛŒØ¯",
	"ğŸ’¡ Ù†Ú©ØªÙ‡: Ø³Ø±Ø¹Øª Ø¨ÛŒØ´ØªØ± = Ø³ØªØ§Ø±Ù‡ Ø¨ÛŒØ´ØªØ±",
	"ğŸ’¡ Ù†Ú©ØªÙ‡: Ú©Ù„Ù…Ø§Øª Ø·ÙˆÙ„Ø§Ù†ÛŒâ€ŒØªØ± Ø§Ù…ØªÛŒØ§Ø² Ø¨ÛŒØ´ØªØ±ÛŒ Ø¯Ø§Ø±Ù†Ø¯",
	"ğŸ’¡ Ù†Ú©ØªÙ‡: Ø¯Ø± Ø­Ø§Ù„Øª Ú†Ø§Ù„Ø´ Ø±ÙˆØ²Ø§Ù†Ù‡ Ø´Ø±Ú©Øª Ú©Ù†ÛŒØ¯",
	"ğŸ’¡ Ù†Ú©ØªÙ‡: ØªÙ…â€ŒÙ‡Ø§ÛŒ Ù…Ø®ØªÙ„Ù Ø±Ø§ Ø§Ù…ØªØ­Ø§Ù† Ú©Ù†ÛŒØ¯"
]

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ø±ÙØ±Ù†Ø³â€ŒÙ‡Ø§ÛŒ Ù†ÙˆØ¯Ù‡Ø§
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
@onready var progress_bar: ProgressBar = $Content/LoadingContainer/ProgressContainer/ProgressBar
@onready var status_label: Label = $Content/LoadingContainer/StatusLabel
@onready var tip_label: Label = $Content/TipLabel
@onready var title_label: Label = $Content/Title
@onready var loading_dots: HBoxContainer = $Content/LoadingContainer/LoadingAnimation
@onready var logo: TextureRect = $Content/LogoContainer/Logo

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ù…ØªØºÛŒØ±Ù‡Ø§
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
var _loading_stages: Array[Dictionary] = []
var _current_stage: int = 0
var _start_time: float = 0.0
var _is_loading_complete: bool = false
var _dots_tween: Tween
var _tip_tween: Tween

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ØªÙˆØ§Ø¨Ø¹ Ú†Ø±Ø®Ù‡ Ø­ÛŒØ§Øª
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
func _ready() -> void:
	_start_time = Time.get_unix_time_from_system()
	
	# ØªÙ†Ø¸ÛŒÙ… Ù…Ø±Ø§Ø­Ù„ Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ
	_setup_loading_stages()
	
	# Ø´Ø±ÙˆØ¹ Ø§Ù†ÛŒÙ…ÛŒØ´Ù†â€ŒÙ‡Ø§
	_start_entrance_animation()
	_start_dots_animation()
	_start_tip_rotation()
	
	# Ø´Ø±ÙˆØ¹ Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ
	_load_next_stage()

func _setup_loading_stages() -> void:
	"""ØªÙ†Ø¸ÛŒÙ… Ù…Ø±Ø§Ø­Ù„ Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ"""
	_loading_stages = [
		{"name": "Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ Ø¯Ø§Ø¯Ù‡â€ŒÙ‡Ø§ÛŒ Ø°Ø®ÛŒØ±Ù‡ Ø´Ø¯Ù‡...", "weight": 0.15, "action": "_load_save_data"},
		{"name": "Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ Ø¯ÛŒÚ©Ø´Ù†Ø±ÛŒ ÙØ§Ø±Ø³ÛŒ...", "weight": 0.35, "action": "_load_dictionary"},
		{"name": "Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ Ù…Ø±Ø§Ø­Ù„ Ø¨Ø§Ø²ÛŒ...", "weight": 0.20, "action": "_load_levels"},
		{"name": "Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ Ù…Ù†Ø§Ø¨Ø¹ Ú¯Ø±Ø§ÙÛŒÚ©ÛŒ...", "weight": 0.15, "action": "_preload_resources"},
		{"name": "Ø¢Ù…Ø§Ø¯Ù‡â€ŒØ³Ø§Ø²ÛŒ Ù†Ù‡Ø§ÛŒÛŒ...", "weight": 0.15, "action": "_finalize_loading"}
	]

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ø§Ù†ÛŒÙ…ÛŒØ´Ù†â€ŒÙ‡Ø§ÛŒ ÙˆØ±ÙˆØ¯ÛŒ
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
func _start_entrance_animation() -> void:
	"""Ø§Ù†ÛŒÙ…ÛŒØ´Ù† ÙˆØ±ÙˆØ¯ Ø¹Ù†Ø§ØµØ±"""
	# Ù…Ø®ÙÛŒ Ú©Ø±Ø¯Ù† Ø§ÙˆÙ„ÛŒÙ‡
	title_label.modulate.a = 0
	title_label.position.y += 30
	
	if logo:
		logo.modulate.a = 0
		logo.scale = Vector2(0.5, 0.5)
	
	progress_bar.modulate.a = 0
	status_label.modulate.a = 0
	tip_label.modulate.a = 0
	
	# Ø§Ù†ÛŒÙ…ÛŒØ´Ù† Ù„ÙˆÚ¯Ùˆ
	var tween := create_tween()
	tween.set_parallel(true)
	
	if logo:
		tween.tween_property(logo, "modulate:a", 1.0, 0.5).set_delay(0.2)
		tween.tween_property(logo, "scale", Vector2.ONE, 0.5)\
			.set_trans(Tween.TRANS_BACK).set_ease(Tween.EASE_OUT).set_delay(0.2)
	
	# Ø§Ù†ÛŒÙ…ÛŒØ´Ù† Ø¹Ù†ÙˆØ§Ù†
	tween.tween_property(title_label, "modulate:a", 1.0, 0.5).set_delay(0.4)
	tween.tween_property(title_label, "position:y", title_label.position.y - 30, 0.5)\
		.set_trans(Tween.TRANS_BACK).set_ease(Tween.EASE_OUT).set_delay(0.4)
	
	# Ø§Ù†ÛŒÙ…ÛŒØ´Ù† Ù¾Ø±ÙˆÚ¯Ø±Ø³ Ø¨Ø§Ø±
	tween.tween_property(progress_bar, "modulate:a", 1.0, 0.3).set_delay(0.6)
	tween.tween_property(status_label, "modulate:a", 1.0, 0.3).set_delay(0.7)
	tween.tween_property(tip_label, "modulate:a", 1.0, 0.3).set_delay(0.8)

func _start_dots_animation() -> void:
	"""Ø§Ù†ÛŒÙ…ÛŒØ´Ù† Ù†Ù‚Ø·Ù‡â€ŒÙ‡Ø§ÛŒ Ù„ÙˆØ¯ÛŒÙ†Ú¯"""
	_dots_tween = create_tween()
	_dots_tween.set_loops()
	
	for i in range(loading_dots.get_child_count()):
		var dot: Panel = loading_dots.get_child(i)
		_dots_tween.tween_property(dot, "modulate:a", 0.3, 0.3).set_delay(i * 0.15)
		_dots_tween.tween_property(dot, "modulate:a", 1.0, 0.3)

func _start_tip_rotation() -> void:
	"""Ú†Ø±Ø®Ø´ Ù†Ú©Ø§Øª Ø±Ø§Ù‡Ù†Ù…Ø§"""
	tip_label.text = TIPS[randi() % TIPS.size()]
	
	_tip_tween = create_tween()
	_tip_tween.set_loops()
	_tip_tween.tween_interval(4.0)
	_tip_tween.tween_callback(_change_tip)

func _change_tip() -> void:
	"""ØªØºÛŒÛŒØ± Ù†Ú©ØªÙ‡ Ø±Ø§Ù‡Ù†Ù…Ø§ Ø¨Ø§ Ø§Ù†ÛŒÙ…ÛŒØ´Ù†"""
	var tween := create_tween()
	tween.tween_property(tip_label, "modulate:a", 0.0, 0.3)
	tween.tween_callback(func(): tip_label.text = TIPS[randi() % TIPS.size()])
	tween.tween_property(tip_label, "modulate:a", 1.0, 0.3)

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ù…Ø¯ÛŒØ±ÛŒØª Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
func _load_next_stage() -> void:
	"""Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ Ù…Ø±Ø­Ù„Ù‡ Ø¨Ø¹Ø¯ÛŒ"""
	if _current_stage >= _loading_stages.size():
		_on_loading_complete()
		return
	
	var stage: Dictionary = _loading_stages[_current_stage]
	status_label.text = stage["name"]
	
	# Ø§Ø¬Ø±Ø§ÛŒ Ø§Ú©Ø´Ù† Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ
	await call(stage["action"])
	
	# Ø¨Ø±ÙˆØ²Ø±Ø³Ø§Ù†ÛŒ Ù¾Ø±ÙˆÚ¯Ø±Ø³ Ø¨Ø§Ø±
	var progress: float = 0.0
	for i in range(_current_stage + 1):
		progress += _loading_stages[i]["weight"]
	
	_animate_progress(progress)
	
	_current_stage += 1
	
	# Ú©Ù…ÛŒ ØªØ§Ø®ÛŒØ± Ø¨Ø±Ø§ÛŒ Ù†Ù…Ø§ÛŒØ´ Ø¨Ù‡ØªØ±
	await get_tree().create_timer(0.2).timeout
	
	_load_next_stage()

func _animate_progress(target: float) -> void:
	"""Ø§Ù†ÛŒÙ…ÛŒØ´Ù† Ù¾Ø±ÙˆÚ¯Ø±Ø³ Ø¨Ø§Ø±"""
	var tween := create_tween()
	tween.tween_property(progress_bar, "value", target, 0.3)\
		.set_trans(Tween.TRANS_SINE)

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ø§Ú©Ø´Ù†â€ŒÙ‡Ø§ÛŒ Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
func _load_save_data() -> void:
	"""Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ Ø¯Ø§Ø¯Ù‡â€ŒÙ‡Ø§ÛŒ Ø°Ø®ÛŒØ±Ù‡ Ø´Ø¯Ù‡"""
	SaveManager.load_game()
	await get_tree().create_timer(0.3).timeout

func _load_dictionary() -> void:
	"""Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ Ø¯ÛŒÚ©Ø´Ù†Ø±ÛŒ ÙØ§Ø±Ø³ÛŒ"""
	var file_path: String = "res://assets/data/persian_words.json"
	
	if ResourceLoader.exists(file_path):
		var file := FileAccess.open(file_path, FileAccess.READ)
		if file:
			var json_string: String = file.get_as_text()
			file.close()
			
			var json := JSON.new()
			if json.parse(json_string) == OK:
				GameData.load_dictionary(json.data)
	else:
		# Ø§ÛŒØ¬Ø§Ø¯ Ø¯ÛŒÚ©Ø´Ù†Ø±ÛŒ Ù¾ÛŒØ´â€ŒÙØ±Ø¶
		_create_default_dictionary()
	
	await get_tree().create_timer(0.3).timeout

func _create_default_dictionary() -> void:
	"""Ø§ÛŒØ¬Ø§Ø¯ Ø¯ÛŒÚ©Ø´Ù†Ø±ÛŒ Ù¾ÛŒØ´â€ŒÙØ±Ø¶"""
	var default_words: Dictionary = {
		# Ú©Ù„Ù…Ø§Øª 2 Ø­Ø±ÙÛŒ
		"Ø§Ø¨": {"meaning": "Ø¢Ø¨"},
		"Ø¨Ø§": {"meaning": "Ø¨Ø§"},
		"Ø¨Ù‡": {"meaning": "Ø¨Ù‡"},
		"ØªØ§": {"meaning": "ØªØ§"},
		"Ø³Ø±": {"meaning": "Ø³Ø±"},
		"Ø¯Ù„": {"meaning": "Ø¯Ù„"},
		"Ú¯Ù„": {"meaning": "Ú¯Ù„"},
		"Ø´Ø¨": {"meaning": "Ø´Ø¨"},
		"Ù…Ù†": {"meaning": "Ù…Ù†"},
		"ØªÙˆ": {"meaning": "ØªÙˆ"},
		
		# Ú©Ù„Ù…Ø§Øª 3 Ø­Ø±ÙÛŒ
		"Ø¢Ø³Ù…Ø§Ù†": {"meaning": "Ø¢Ø³Ù…Ø§Ù†"},
		"Ø§ÛŒØ±Ø§Ù†": {"meaning": "Ø§ÛŒØ±Ø§Ù†"},
		"Ú©ØªØ§Ø¨": {"meaning": "Ú©ØªØ§Ø¨"},
		"Ø³Ù„Ø§Ù…": {"meaning": "Ø³Ù„Ø§Ù…"},
		"Ø¯ÙˆØ³Øª": {"meaning": "Ø¯ÙˆØ³Øª"},
		"Ø¹Ø´Ù‚": {"meaning": "Ø¹Ø´Ù‚"},
		"Ø²Ù†Ø¯Ú¯ÛŒ": {"meaning": "Ø²Ù†Ø¯Ú¯ÛŒ"},
		"Ø®Ø§Ù†Ù‡": {"meaning": "Ø®Ø§Ù†Ù‡"},
		"Ù…Ø§Ø¯Ø±": {"meaning": "Ù…Ø§Ø¯Ø±"},
		"Ù¾Ø¯Ø±": {"meaning": "Ù¾Ø¯Ø±"},
		"Ø¨Ø§Ø±Ø§Ù†": {"meaning": "Ø¨Ø§Ø±Ø§Ù†"},
		"Ø®ÙˆØ±Ø´ÛŒØ¯": {"meaning": "Ø®ÙˆØ±Ø´ÛŒØ¯"},
		"Ø³ØªØ§Ø±Ù‡": {"meaning": "Ø³ØªØ§Ø±Ù‡"},
		"Ø¯Ø±ÛŒØ§": {"meaning": "Ø¯Ø±ÛŒØ§"},
		"Ú©ÙˆÙ‡": {"meaning": "Ú©ÙˆÙ‡"},
		"Ø¬Ù†Ú¯Ù„": {"meaning": "Ø¬Ù†Ú¯Ù„"},
		"Ø´Ù‡Ø±": {"meaning": "Ø´Ù‡Ø±"},
		"Ø±ÙˆØ³ØªØ§": {"meaning": "Ø±ÙˆØ³ØªØ§"},
		"Ø¨Ø§Øº": {"meaning": "Ø¨Ø§Øº"},
		"Ø¯Ø±Ø®Øª": {"meaning": "Ø¯Ø±Ø®Øª"},
		"Ù¾Ø±Ù†Ø¯Ù‡": {"meaning": "Ù¾Ø±Ù†Ø¯Ù‡"},
		"Ù…Ø§Ù‡ÛŒ": {"meaning": "Ù…Ø§Ù‡ÛŒ"},
		"Ú¯Ø±Ø¨Ù‡": {"meaning": "Ú¯Ø±Ø¨Ù‡"},
		"Ø³Ú¯": {"meaning": "Ø³Ú¯"},
		"Ø§Ø³Ø¨": {"meaning": "Ø§Ø³Ø¨"},
		"Ø´ÛŒØ±": {"meaning": "Ø´ÛŒØ±"},
		"Ù¾Ù„Ù†Ú¯": {"meaning": "Ù¾Ù„Ù†Ú¯"},
		"Ø¹Ù‚Ø§Ø¨": {"meaning": "Ø¹Ù‚Ø§Ø¨"},
		"Ù‚Ù„Ø¨": {"meaning": "Ù‚Ù„Ø¨"},
		"Ú†Ø´Ù…": {"meaning": "Ú†Ø´Ù…"},
		"Ø¯Ø³Øª": {"meaning": "Ø¯Ø³Øª"},
		"Ù¾Ø§": {"meaning": "Ù¾Ø§"},
		"Ø³ÛŒØ¨": {"meaning": "Ø³ÛŒØ¨"},
		"Ø§Ù†Ø§Ø±": {"meaning": "Ø§Ù†Ø§Ø±"},
		"Ø§Ù†Ú¯ÙˆØ±": {"meaning": "Ø§Ù†Ú¯ÙˆØ±"},
		"Ù‡Ù„Ùˆ": {"meaning": "Ù‡Ù„Ùˆ"},
		"Ú¯ÛŒÙ„Ø§Ø³": {"meaning": "Ú¯ÛŒÙ„Ø§Ø³"},
		"Ù†Ø§Ù†": {"meaning": "Ù†Ø§Ù†"},
		"Ø¢Ø¨": {"meaning": "Ø¢Ø¨"},
		"Ø´ÛŒØ±": {"meaning": "Ø´ÛŒØ±"},
		"Ø¹Ø³Ù„": {"meaning": "Ø¹Ø³Ù„"},
		"Ù†Ù…Ú©": {"meaning": "Ù†Ù…Ú©"},
		"Ù‚Ù†Ø¯": {"meaning": "Ù‚Ù†Ø¯"},
		"Ú†Ø§ÛŒ": {"meaning": "Ú†Ø§ÛŒ"},
		"Ù‚Ù‡ÙˆÙ‡": {"meaning": "Ù‚Ù‡ÙˆÙ‡"},
		
		# Ú©Ù„Ù…Ø§Øª ØªØ±Ú©ÛŒØ¨ÛŒ
		"Ú¯Ù„Ø§Ø¨": {"meaning": "Ú¯Ù„Ø§Ø¨"},
		"Ø¢ÙØªØ§Ø¨": {"meaning": "Ø¢ÙØªØ§Ø¨"},
		"Ù…Ù‡ØªØ§Ø¨": {"meaning": "Ù…Ù‡ØªØ§Ø¨"},
		"Ø´Ø¨Ù†Ù…": {"meaning": "Ø´Ø¨Ù†Ù…"},
		"Ø¨Ù‡Ø§Ø±": {"meaning": "Ø¨Ù‡Ø§Ø±"},
		"ØªØ§Ø¨Ø³ØªØ§Ù†": {"meaning": "ØªØ§Ø¨Ø³ØªØ§Ù†"},
		"Ù¾Ø§ÛŒÛŒØ²": {"meaning": "Ù¾Ø§ÛŒÛŒØ²"},
		"Ø²Ù…Ø³ØªØ§Ù†": {"meaning": "Ø²Ù…Ø³ØªØ§Ù†"},
		
		# Ùˆ ØµØ¯Ù‡Ø§ Ú©Ù„Ù…Ù‡ Ø¯ÛŒÚ¯Ø±...
	}
	
	GameData.load_dictionary(default_words)

func _load_levels() -> void:
	"""Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ Ù…Ø±Ø§Ø­Ù„ Ø¨Ø§Ø²ÛŒ"""
	var file_path: String = "res://resources/levels/levels_data.json"
	
	if ResourceLoader.exists(file_path):
		var file := FileAccess.open(file_path, FileAccess.READ)
		if file:
			var json_string: String = file.get_as_text()
			file.close()
			
			var json := JSON.new()
			if json.parse(json_string) == OK:
				GameData.levels_data = json.data
	else:
		_generate_default_levels()
	
	await get_tree().create_timer(0.3).timeout

func _generate_default_levels() -> void:
	"""Ø§ÛŒØ¬Ø§Ø¯ Ù…Ø±Ø§Ø­Ù„ Ù¾ÛŒØ´â€ŒÙØ±Ø¶"""
	var levels: Array[Dictionary] = []
	
	# 50 Ù…Ø±Ø­Ù„Ù‡ Ø§ÙˆÙ„ÛŒÙ‡
	var level_configs: Array[Dictionary] = [
		# Ù…Ø±Ø§Ø­Ù„ Ø¢Ø³Ø§Ù† (1-10)
		{"letters": "Ø³Ù„Ø§Ù…", "words": ["Ø³Ù„Ø§Ù…", "Ø³Ø§Ù„", "Ù„Ø§Ù…"], "bonus": ["Ù…Ø§Ø³"]},
		{"letters": "Ú©ØªØ§Ø¨", "words": ["Ú©ØªØ§Ø¨", "ØªØ§Ø¨", "Ø¢Ø¨"], "bonus": ["Ú©Ø§Ø¨"]},
		{"letters": "Ø®Ø§Ù†Ù‡", "words": ["Ø®Ø§Ù†Ù‡", "Ø®Ø§Ù†", "Ù†Ù‡"], "bonus": []},
		{"letters": "Ø¯ÙˆØ³Øª", "words": ["Ø¯ÙˆØ³Øª", "Ø¯Ùˆ", "ØªÙˆ"], "bonus": ["Ø³ÙˆØ¯"]},
		{"letters": "Ù…Ø§Ø¯Ø±", "words": ["Ù…Ø§Ø¯Ø±", "Ù…Ø§Ø±", "Ø¯Ø§Ø±"], "bonus": ["Ø¢Ø±Ù…"]},
		{"letters": "Ù¾Ø¯Ø±", "words": ["Ù¾Ø¯Ø±", "Ø¯Ø±", "Ù¾Ø±"], "bonus": []},
		{"letters": "Ø¨Ø§Ø±Ø§Ù†", "words": ["Ø¨Ø§Ø±Ø§Ù†", "Ø¨Ø§Ø±Ø§Ù†", "Ø¨Ø§Ø±", "Ø±Ø§Ù†"], "bonus": ["Ù†Ø§Ø±", "Ø¢Ø¨Ø§Ù†"]},
		{"letters": "Ø³ØªØ§Ø±Ù‡", "words": ["Ø³ØªØ§Ø±Ù‡", "Ø³ØªØ§Ø±", "ØªØ§Ø±", "Ø³Ø±"], "bonus": ["Ø±Ø§Ø³Øª"]},
		{"letters": "Ø®ÙˆØ±Ø´ÛŒØ¯", "words": ["Ø®ÙˆØ±Ø´ÛŒØ¯", "Ø®ÙˆØ±", "Ø´ÛŒØ¯"], "bonus": ["Ø¯Ø±Ø®Ø´"]},
		{"letters": "Ø¯Ø±ÛŒØ§", "words": ["Ø¯Ø±ÛŒØ§", "Ø¯Ø§Ø±", "ÛŒØ§Ø±"], "bonus": ["Ø§ÛŒØ±Ø§Ø¯"]},
		
		# Ù…Ø±Ø§Ø­Ù„ Ù…ØªÙˆØ³Ø· (11-30)
		{"letters": "Ø²Ù†Ø¯Ú¯ÛŒ", "words": ["Ø²Ù†Ø¯Ú¯ÛŒ", "Ø²Ù†Ø¯", "Ú¯Ù†Ø¯"], "bonus": ["Ù†ÛŒØ²Ø¯"]},
		{"letters": "Ø¢Ø²Ø§Ø¯ÛŒ", "words": ["Ø¢Ø²Ø§Ø¯ÛŒ", "Ø¢Ø²Ø§Ø¯", "ÛŒØ§Ø¯"], "bonus": []},
		{"letters": "Ø§Ù…ÛŒØ¯", "words": ["Ø§Ù…ÛŒØ¯", "Ù…ÛŒØ¯", "Ø¯Ø§Ù…"], "bonus": ["ÛŒØ§Ø¯"]},
		{"letters": "Ø´Ø§Ø¯ÛŒ", "words": ["Ø´Ø§Ø¯ÛŒ", "Ø´Ø§Ø¯", "ÛŒØ§Ø¯"], "bonus": []},
		{"letters": "Ø³Ø¨Ø²", "words": ["Ø³Ø¨Ø²", "Ø¨Ø²"], "bonus": []},
		# Ø§Ø¯Ø§Ù…Ù‡ Ù…Ø±Ø§Ø­Ù„...
	]
	
	for i in range(level_configs.size()):
		var config: Dictionary = level_configs[i]
		levels.append({
			"id": i + 1,
			"letters": config["letters"],
			"words": config["words"],
			"bonus_words": config.get("bonus", []),
			"difficulty": _get_difficulty_for_level(i + 1),
			"time_limit": _get_time_limit_for_level(i + 1),
			"star_thresholds": _get_star_thresholds_for_level(i + 1)
		})
	
	# ØªÙˆÙ„ÛŒØ¯ Ù…Ø±Ø§Ø­Ù„ Ø¨ÛŒØ´ØªØ± Ø¨Ù‡ ØµÙˆØ±Øª Ø®ÙˆØ¯Ú©Ø§Ø±
	for i in range(level_configs.size(), 500):
		levels.append(_generate_level(i + 1))
	
	GameData.levels_data = levels

func _get_difficulty_for_level(level: int) -> String:
	if level <= 10: return "easy"
	elif level <= 30: return "medium"
	elif level <= 100: return "hard"
	else: return "expert"

func _get_time_limit_for_level(level: int) -> int:
	if level <= 10: return 180
	elif level <= 30: return 150
	elif level <= 100: return 120
	else: return 90

func _get_star_thresholds_for_level(level: int) -> Dictionary:
	var base_time: int = _get_time_limit_for_level(level)
	return {
		"three_stars": base_time * 0.5,
		"two_stars": base_time * 0.75
	}

func _generate_level(level_id: int) -> Dictionary:
	"""ØªÙˆÙ„ÛŒØ¯ Ø®ÙˆØ¯Ú©Ø§Ø± Ù…Ø±Ø­Ù„Ù‡"""
	var difficulty: String = _get_difficulty_for_level(level_id)
	var letter_count: int
	var word_count: int
	
	match difficulty:
		"easy":
			letter_count = randi_range(4, 5)
			word_count = randi_range(3, 4)
		"medium":
			letter_count = randi_range(5, 6)
			word_count = randi_range(4, 6)
		"hard":
			letter_count = randi_range(6, 7)
			word_count = randi_range(5, 8)
		"expert":
			letter_count = randi_range(7, 8)
			word_count = randi_range(6, 10)
	
	# Ø¯Ø± Ù†Ø³Ø®Ù‡ ÙˆØ§Ù‚Ø¹ÛŒØŒ Ú©Ù„Ù…Ø§Øª Ø§Ø² Ø¯ÛŒÚ©Ø´Ù†Ø±ÛŒ Ø§Ù†ØªØ®Ø§Ø¨ Ù…ÛŒâ€ŒØ´ÙˆÙ†Ø¯
	return {
		"id": level_id,
		"letters": "Ù…Ø«Ø§Ù„",  # Ø¬Ø§ÛŒÚ¯Ø²ÛŒÙ† Ø¨Ø§ Ø§Ù„Ú¯ÙˆØ±ÛŒØªÙ… ÙˆØ§Ù‚Ø¹ÛŒ
		"words": ["Ú©Ù„Ù…Ù‡"],
		"bonus_words": [],
		"difficulty": difficulty,
		"time_limit": _get_time_limit_for_level(level_id),
		"star_thresholds": _get_star_thresholds_for_level(level_id)
	}

func _preload_resources() -> void:
	"""Ù¾ÛŒØ´â€ŒØ¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ Ù…Ù†Ø§Ø¨Ø¹ Ú¯Ø±Ø§ÙÛŒÚ©ÛŒ"""
	# Ù„ÛŒØ³Øª Ù…Ù†Ø§Ø¨Ø¹ Ø¨Ø±Ø§ÛŒ Ù¾ÛŒØ´â€ŒØ¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ
	var resources_to_load: Array[String] = [
		"res://scenes/Main.tscn",
		"res://scenes/Game.tscn",
		"res://scenes/LevelSelect.tscn",
		"res://scenes/components/LetterCircle.tscn",
		"res://scenes/components/WordGrid.tscn"
	]
	
	for resource_path in resources_to_load:
		if ResourceLoader.exists(resource_path):
			ResourceLoader.load_threaded_request(resource_path)
	
	await get_tree().create_timer(0.3).timeout

func _finalize_loading() -> void:
	"""Ø¢Ù…Ø§Ø¯Ù‡â€ŒØ³Ø§Ø²ÛŒ Ù†Ù‡Ø§ÛŒÛŒ"""
	# Ø§Ø¹Ù…Ø§Ù„ ØªÙ†Ø¸ÛŒÙ…Ø§Øª ØµØ¯Ø§
	AudioManager.apply_settings()
	
	# Ø¨Ø±Ø±Ø³ÛŒ Ø¬Ø§ÛŒØ²Ù‡ Ø±ÙˆØ²Ø§Ù†Ù‡
	if GameData.can_claim_daily_reward():
		# Ù†Ø´Ø§Ù† Ø¯Ø§Ø¯Ù† Ø¯Ø± Ù…Ù†ÙˆÛŒ Ø§ØµÙ„ÛŒ
		pass
	
	await get_tree().create_timer(0.2).timeout

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ØªÚ©Ù…ÛŒÙ„ Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
func _on_loading_complete() -> void:
	"""Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ Ú©Ø§Ù…Ù„ Ø´Ø¯"""
	_is_loading_complete = true
	status_label.text = "Ø¢Ù…Ø§Ø¯Ù‡!"
	
	# Ø§Ø·Ù…ÛŒÙ†Ø§Ù† Ø§Ø² Ø­Ø¯Ø§Ù‚Ù„ Ø²Ù…Ø§Ù† Ù†Ù…Ø§ÛŒØ´
	var elapsed: float = Time.get_unix_time_from_system() - _start_time
	if elapsed < MIN_LOADING_TIME:
		await get_tree().create_timer(MIN_LOADING_TIME - elapsed).timeout
	
	# Ø§Ù†ÛŒÙ…ÛŒØ´Ù† Ø®Ø±ÙˆØ¬
	_play_exit_animation()

func _play_exit_animation() -> void:
	"""Ø§Ù†ÛŒÙ…ÛŒØ´Ù† Ø®Ø±ÙˆØ¬ Ø§Ø² ØµÙØ­Ù‡ Ù„ÙˆØ¯ÛŒÙ†Ú¯"""
	if _dots_tween:
		_dots_tween.kill()
	if _tip_tween:
		_tip_tween.kill()
	
	var tween := create_tween()
	tween.set_parallel(true)
	
	# Fade out Ù‡Ù…Ù‡ Ø¹Ù†Ø§ØµØ±
	tween.tween_property(self, "modulate:a", 0.0, 0.5)
	
	# Scale down Ù„ÙˆÚ¯Ùˆ
	if logo:
		tween.tween_property(logo, "scale", Vector2(0.8, 0.8), 0.5)
	
	tween.chain().tween_callback(_go_to_main_menu)

func _go_to_main_menu() -> void:
	"""Ø±ÙØªÙ† Ø¨Ù‡ Ù…Ù†ÙˆÛŒ Ø§ØµÙ„ÛŒ"""
	get_tree().change_scene_to_file(NEXT_SCENE)
